# my_pushover

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo_config.md  demo_install.md  pushover_cli.py  pyproject.toml  requirements.txt  setup.py
examples/: system_monitor.sh
pushover_cli/: __init__.py  cli.py  config.py  core.py
tests/: test_pushover.py
